--- a/index.html
+++ b/index.html
@@ -3,7 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MidlightDE</title>
+    <link rel="stylesheet" href="style.css" />
+    <title>Midlight Desktop Environment</title>
   </head>
-  <body></body>
+  <body>
+    <div class="taskbar-container">
+      <div class="taskbar">
+        <img src="Midlight.svg" alt="Midlight menu" class="tb-icon" />
+        <img src="placeholder.png" alt="Placeholder icon" class="tb-icon" />
+      </div>
+    </div>
+  </body>
 </html>
