--- a/index.html
+++ b/index.html
@@ -9,9 +9,16 @@
   <body>
     <div class="taskbar-container">
       <div class="taskbar">
-        <img src="Midlight.svg" alt="Midlight menu" class="tb-icon" />
-        <img src="placeholder.png" alt="Placeholder icon" class="tb-icon" />
+        <div class="apps">
+          <img src="Midlight.svg" alt="Midlight menu" class="tb-icon" />
+          <img src="placeholder.png" alt="Placeholder icon" class="tb-icon" />
+        </div>
+        <div class="timeDate">
+          <p class="time">9:41</p>
+          <p class="date">Mon, January 99</p>
+        </div>
       </div>
     </div>
   </body>
+  <script src="script.js"></script>
 </html>
