Added window and package system

--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
     <div class="taskbar-container">
       <div class="taskbar">
         <div class="apps">
-          <img src="Midlight.svg" alt="Midlight menu" class="tb-icon" />
-          <img src="placeholder.png" alt="Placeholder icon" class="tb-icon" />
+          <img src="assets/Midlight.svg" alt="Midlight menu" class="tb-icon" />
+          <img
+            src="assets/placeholder.png"
+            alt="Placeholder icon"
+            class="tb-icon"
+          />
         </div>
         <div class="timeDate">
           <p class="time">9:41</p>
