Huge update: Core-based system

--- a/index.html
+++ b/index.html
@@ -3,26 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="shift-away.css" />
     <link rel="stylesheet" href="style.css" />
     <title>Midlight Desktop Environment</title>
   </head>
   <body>
-    <div class="taskbar-container">
+    <!-- <div class="taskbar-container">
       <div class="taskbar">
         <div class="apps">
           <img src="assets/Midlight.svg" alt="Midlight menu" class="tb-icon" />
-          <img
-            src="assets/placeholder.png"
-            alt="Placeholder icon"
-            class="tb-icon"
-          />
         </div>
         <div class="timeDate">
           <p class="time">9:41</p>
           <p class="date">Mon, January 99</p>
         </div>
       </div>
-    </div>
+    </div> -->
   </body>
-  <script src="script.js"></script>
+  <script src="script.js" type="module"></script>
 </html>
