Remove redundant code

--- a/index.html
+++ b/index.html
@@ -7,18 +7,6 @@
     <link rel="stylesheet" href="style.css" />
     <title>Midlight Desktop Environment</title>
   </head>
-  <body>
-    <!-- <div class="taskbar-container">
-      <div class="taskbar">
-        <div class="apps">
-          <img src="assets/Midlight.svg" alt="Midlight menu" class="tb-icon" />
-        </div>
-        <div class="timeDate">
-          <p class="time">9:41</p>
-          <p class="date">Mon, January 99</p>
-        </div>
-      </div>
-    </div> -->
-  </body>
+  <body></body>
   <script src="script.js" type="module"></script>
 </html>
