--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="shift-away.css" />
     <link rel="stylesheet" href="style.css" />
     <title>Midlight Desktop Environment</title>
   </head>
   <body></body>
-  <script src="script.js" type="module"></script>
+  <script src="/libs/localforage.min.js"></script>
+  <script src="script.js"></script>
 </html>
